2002-02-13  Ben Wing  <ben@xemacs.org>

	* event-stream.c (reset_key_echo):
	* event-stream.c (reset_this_command_keys):
	* event-stream.c (execute_command_event):
	If console is dead as a result of C-x 5 0, then post-command stuff
	needs to be careful and do only non-console-specific stuff.

2002-02-11  Mike Sperber  <mike@xemacs.org>

	* device-x.c: 
	(x_IO_error_handler):
	(x_init_device): Temporarily keep device in static variable
	`device_being_initialized' so we can recover gracefully from
	internal XOpenDevice failure.  (XOpenDevice is documented to
	return NULL on failure, but sometimes calls the IO error handler
	instead.)

2002-02-12  Stephen J. Turnbull  <stephen@xemacs.org>

	* fileio.c (Ffind_file_name_handler): Improve docstring.

2002-01-20  Stephen J. Turnbull  <stephen@xemacs.org>

	* fns.c (Fmapconcat): Improve docstring.

2002-01-03  Eric Gillespie, Jr.  <epg@pretzelnet.org>

	* device-gtk.c: Add prototype for
	emacs_gtk_selection_clear_event_handle.
	(gtk_init_device): Call gtk_selection_add_target for CLIPBOARD
	selection.  Setup signal handler for "selection_clear_event"
	(emacs_gtk_selection_clear_event_handle).

	* select-gtk.c (emacs_gtk_selection_clear_event_handle): Handle
	other applications owning the clipboard (based on
	x_handle_selection_clear).

2002-02-02  William M. Perry  <wmperry@gnu.org>

	* winslots.h: New toolbar_shadow_thickness slot.

	* toolbar.c (Vtoolbar_shadow_thickness): New specifier to control
	thickness of toolbar shadows instead of relying on X resourcs.
	(toolbar_shadows_changed): New function to redraw toolbars if the
	thickness specifier is changed.
	(specifier_vars_of_toolbar): Arrange for caching and defaults for
	toolbar-shadow-thickness.

	* toolbar-x.c: Use the new redisplay-based toolbar code.

	* toolbar-common.c (__prepare_button_area): Look at
	toolbar-shadow-thickness specifier instead of window-system
	specific stuff.

	* gtk-xemacs.c (smash_scrollbar_specifiers): New function to set